--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <button id='save'>Save</button>
     <button id='load'>Load</button>
     <button id='run'>Run</button>
-    <canvas id='output'></canvas>
+    <canvas id='output' width='200px' height='200px'></canvas>
     <textarea id='log' contenteditable='false'></textarea>
   </body>
 </html>
